# sounding-wyoming-text-list

./: Cargo.toml  README.md
example_data/: OUN_May_Tornado_2013.html  otx.html  otx2.html  tfx.html
src/: error.rs  lib.rs  parse_section.rs  sounding_iter.rs  text_iter.rs
tests/: test_example_data.rs
