[package]
name = "sounding-wyoming-text-list"
version = "0.5.0"
authors = ["Ryan <rnleach@users.noreply.github.com>"]
edition = "2024"

description = """Library to parse HTML text from University of Wyoming with sounding data."""
repository = "https://github.com/rnleach/sounding-wyoming-text-list.git"
readme = "README.md"
license-file = "LICENSE"
exclude = ["**/*.rs.bk",".gitignore",".vscode/**/*", "tests/**/*", "tags", "example_data/**/*"]
categories = ["science"]
keywords = ["weather","sounding","meteorology", "skew-t"]

[dependencies]
metfor = "^0.10.0"
sounding-analysis = "^0.19.0"
chrono="^0.4"
optional = "^0.5.0"
